--- a/futNfue.html
+++ b/futNfue.html
@@ -363,11 +363,11 @@
                 <div class="contact-form__inner">
                     <div class="row booking position-relative">
                         <div class="col-xl-4 col-xxl-6 col-lg-4 col-md-12">
-                            <h2 class="animated wow fadeInLeft">Contact</h2>
+                            <h2 class="wow fadeInLeft" data-wow-duration="2s">Contact</h2>
                         </div>
                         <div class="col-xl-8 col-xxl-6 col-lg-8 col-md-12">
                             <div class="contact-form__info position-relative">
-                                <div class="animated wow fadeInRight">
+                                <div class="wow fadeInRight" data-wow-duration="2s">
                                     <button class="btn button-secondary">
                                         Book Now
                                     </button>
@@ -380,7 +380,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-6 col-md-12 form animated wow fadeInLeft">
+                        <div class="col-lg-6 col-md-12 form wow fadeInLeft" data-wow-delay=".5s">
                             <p class="font-futura">Ask us a question</p>
                             <form>
                                 <div class="form-floating mb-3">
@@ -418,8 +418,10 @@
                                 <button class="btn button-primary">Submit</button>
                             </form>
                         </div>
-                        <div class="col-lg-6 col-md-12 justify-content-end d-flex">
-                            <img src="assets/images/home/form.png" alt="Form Image" class="animated wow fadeInRight">
+                        <div class="col-lg-6 col-md-12 justify-content-end d-flex position-relative">
+                            <div class="contact-blob"></div>
+                            <img src="assets/images/home/form.png" data-parallax='{"y" : -50}' alt="Form Image" class=""
+                                data-wow-delay="1s">
                         </div>
                     </div>
                 </div>
@@ -434,9 +436,11 @@
             <div class="row">
                 <div class="col-12">
                     <div class="footer__logo position-absolute">
-                        <img src="assets/images/footerLogo.png" alt="PSNY Footer Logo"
-                            class="img-fluid animated wow fadeInUp">
-                        <span class="animated wow fadeInUp">
+                        <a href="index.html">
+                            <img src="assets/images/footerLogo.png" alt="PSNY Footer Logo"
+                                class="img-fluid wow fadeInUp" data-wow-duration="1s">
+                        </a>
+                        <span class="wow fadeInUp" data-wow-duration="1s">
                             Plastic Surgery
                             <br>
                             of New york
@@ -445,7 +449,7 @@
                 </div>
             </div>
             <div class="row footer__menu">
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
                     <p>About us</p>
                     <ul>
                         <li><a href="#">Our Team</a></li>
@@ -453,7 +457,7 @@
                         <li><a href="#">Our Philosophy</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.8s">
                     <p>Surgical</p>
                     <ul>
                         <li><a href="#">Breast</a></li>
@@ -463,7 +467,7 @@
                         <li><a href="#">Hair</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                     <p>non-surgical</p>
                     <ul>
                         <li><a href="#">Aesthesics</a></li>
@@ -473,14 +477,15 @@
                         <li><a href="#">Laser</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.2s">
                     <p>contact</p>
                     <ul>
                         <li><a href="#">Contact us</a></li>
                         <li><a href="#">Book now</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-4 col-sm-12 d-flex justify-content-end animated wow fadeInUp">
+                <div class="col-lg-4 col-sm-12 d-flex justify-content-end animated wow fadeInUp" data-wow-duration="1s"
+                    data-wow-delay="1.5s">
                     <div class="footer__socials">
                         <div class="cell-info">
                             <span>CALL US</span>
@@ -531,10 +536,10 @@
                 </div>
             </div>
             <div class="row footer__copyright">
-                <div class="col-6 animated wow fadeInUp">
+                <div class="col-6 animated wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                     <p>&copy; 2020 psny</p>
                 </div>
-                <div class="col-6 text-end animated wow fadeInUp">
+                <div class="col-6 text-end animated wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s">
                     <a href="#">Terms of use</a> |
                     <a href="#">Privacy Policy</a>
                 </div>
@@ -548,13 +553,15 @@
     <div class="cursor-follower"></div>
     <!-- Cursor Ends -->
 
-    <!-- Font Awesome CDN -->
-    <script src="https://kit.fontawesome.com/321abfd063.js" crossorigin="anonymous"></script>
     <!-- WOW JS -->
     <script src="assets/vendors/wow-js/wow.min.js"></script>
+    <!-- Font Awesome CDN -->
+    <script src="https://kit.fontawesome.com/321abfd063.js" crossorigin="anonymous"></script>
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- Scroll Parallax -->
+    <script src="assets/vendors/scroll/jquery.parallax-scroll.js"></script>
     <!-- gsap cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"
         integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ=="
