--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,7 @@
     <title>PSNY</title>
 
     <!-- Animate CSS -->
-    <link rel="stylesheet" href="assets/vendors/animate-css/animate.css">
+    <link rel="stylesheet" href="assets/vendors/animation/animate.css">
     <!-- Lightbox CSS -->
     <link rel="stylesheet" href="assets/vendors/lightbox/lightbox.min.css">
     <!-- Boostrap -->
@@ -99,7 +99,7 @@
         <div class="container">
             <div class="row">
                 <div class="notice-inner">
-                    <div class="col d-flex animated wow fadeIn">
+                    <div class="col d-flex animated fadeInLeft">
                         <svg class="animated fadeIn" width="16" height="16" viewBox="0 0 16 16" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -107,7 +107,7 @@
                                 fill="#EB5757" />
                             <circle cx="8" cy="8" r="7.65" stroke="#EB5757" stroke-width="0.7" />
                         </svg>
-                        <div class="notice animated fadeIn">
+                        <div class="notice">
                             <p>
                                 we're are opened.
                                 <br>
@@ -120,7 +120,8 @@
             </div>
             <div class="row">
                 <div class="col-12">
-                    <h2 class="subpage-banner__title color-primary mb-0 font-futura animated wow fadeIn">
+                    <h2 class="subpage-banner__title color-primary mb-0 font-futura wow fadeInUp"
+                        data-wow-duration="2s">
                         Gallery
                     </h2>
                 </div>
@@ -130,7 +131,7 @@
     <!-- Banner Ends -->
 
     <!-- Banner Bottom Starts -->
-    <section class="banner-bottom">
+    <section class="banner-bottom wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -147,12 +148,13 @@
     <!-- Gallery Starts -->
     <section class="gallery">
         <div class="container">
-            <div class="row wow animated fadeInUp">
+            <div class="row">
                 <div class="col-md-4">
                     <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link"
                         data-lightbox="example-set"
                         data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="assets/images/gallery/item01.jpg" alt="gallery item" class="img-fluid example-image">
+                        <img src="assets/images/gallery/item01.jpg" alt="gallery item"
+                            class="img-fluid example-image wow zoomIn" data-wow-duration=".8s">
                     </a>
                 </div>
                 <div class="col-md-4">
@@ -160,7 +162,7 @@
                         data-lightbox="example-set"
                         data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
                         <img src="assets/images/gallery/placeholder.png" alt="gallery item"
-                            class="img-fluid example-image">
+                            class="img-fluid example-image wow zoomIn" data-wow-delay=".3s" data-wow-duration=".8s">
                     </a>
                 </div>
                 <div class="col-md-4">
@@ -168,7 +170,7 @@
                         data-lightbox="example-set"
                         data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
                         <img src="assets/images/gallery/placeholder.png" alt="gallery item"
-                            class="img-fluid example-image">
+                            class="img-fluid example-image wow zoomIn" data-wow-delay=".6s" data-wow-duration=".8s">
                     </a>
                 </div>
             </div>
@@ -177,7 +179,8 @@
                     <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link"
                         data-lightbox="example-set"
                         data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="assets/images/gallery/item02.jpg" alt="gallery item" class="img-fluid example-image">
+                        <img src="assets/images/gallery/item02.jpg" alt="gallery item"
+                            class="img-fluid example-image wow zoomIn" data-wow-duration=".8s">
                     </a>
                 </div>
                 <div class="col-md-4">
@@ -185,14 +188,15 @@
                         data-lightbox="example-set"
                         data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
                         <img src="assets/images/gallery/placeholder.png" alt="gallery item"
-                            class="img-fluid example-image">
+                            class="img-fluid example-image wow zoomIn" data-wow-delay=".3s" data-wow-duration=".8s">
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link"
                         data-lightbox="example-set"
                         data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="assets/images/gallery/item03.jpg" alt="gallery item" class="img-fluid example-image">
+                        <img src="assets/images/gallery/item03.jpg" alt="gallery item"
+                            class="img-fluid example-image wow zoomIn" data-wow-delay=".6s" data-wow-duration=".8s">
                     </a>
                 </div>
             </div>
@@ -202,21 +206,23 @@
                         data-lightbox="example-set"
                         data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
                         <img src="assets/images/gallery/placeholder.png" alt="gallery item"
-                            class="img-fluid example-image">
+                            class="img-fluid example-image wow zoomIn" data-wow-duration=".8s">
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="https://dummyimage.com/750x400/000000/dedede.pn" class="example-image-link"
                         data-lightbox="example-set"
                         data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="assets/images/gallery/item04.jpg" alt="gallery item" class="img-fluid example-image">
+                        <img src="assets/images/gallery/item04.jpg" alt="gallery item"
+                            class="img-fluid example-image wow zoomIn" data-wow-delay=".3s" data-wow-duration=".8s">
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="https://dummyimage.com/750x400/000000/dedede.pn" class="example-image-link"
                         data-lightbox="example-set"
                         data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="assets/images/gallery/item05.jpg" alt="gallery item" class="img-fluid example-image">
+                        <img src="assets/images/gallery/item05.jpg" alt="gallery item"
+                            class="img-fluid example-image wow zoomIn" data-wow-delay=".6s" data-wow-duration=".8s">
                     </a>
                 </div>
             </div>
@@ -225,14 +231,16 @@
                     <a href="https://dummyimage.com/750x400/000000/dedede.pn" class="example-image-link"
                         data-lightbox="example-set"
                         data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="assets/images/gallery/item06.jpg" alt="gallery item" class="img-fluid example-image">
+                        <img src="assets/images/gallery/item06.jpg" alt="gallery item"
+                            class="img-fluid example-image wow zoomIn" data-wow-duration=".8s">
                     </a>
                 </div>
                 <div class="col-md-4">
                     <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link"
                         data-lightbox="example-set"
                         data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
-                        <img src="assets/images/gallery/item07.jpg" alt="gallery item" class="img-fluid example-image">
+                        <img src="assets/images/gallery/item07.jpg" alt="gallery item"
+                            class="img-fluid example-image wow zoomIn" data-wow-delay=".3s" data-wow-duration=".8s">
                     </a>
                 </div>
                 <div class="col-md-4">
@@ -240,7 +248,7 @@
                         data-lightbox="example-set"
                         data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
                         <img src="assets/images/gallery/placeholder.png" alt="gallery item"
-                            class="img-fluid example-image">
+                            class="img-fluid example-image wow zoomIn" data-wow-delay=".6s" data-wow-duration=".8s">
                     </a>
                 </div>
             </div>
@@ -255,11 +263,11 @@
                 <div class="contact-form__inner">
                     <div class="row booking position-relative">
                         <div class="col-xl-4 col-xxl-6 col-lg-4 col-md-12">
-                            <h2 class="animated wow fadeInLeft">Contact</h2>
+                            <h2 class="wow fadeInLeft" data-wow-duration="2s">Contact</h2>
                         </div>
                         <div class="col-xl-8 col-xxl-6 col-lg-8 col-md-12">
                             <div class="contact-form__info position-relative">
-                                <div class="animated wow fadeInRight">
+                                <div class="wow fadeInRight" data-wow-duration="2s">
                                     <button class="btn button-secondary">
                                         Book Now
                                     </button>
@@ -272,7 +280,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-6 col-md-12 form animated wow fadeInLeft">
+                        <div class="col-lg-6 col-md-12 form wow fadeInLeft" data-wow-delay=".5s">
                             <p class="font-futura">Ask us a question</p>
                             <form>
                                 <div class="form-floating mb-3">
@@ -310,8 +318,10 @@
                                 <button class="btn button-primary">Submit</button>
                             </form>
                         </div>
-                        <div class="col-lg-6 col-md-12 justify-content-end d-flex">
-                            <img src="assets/images/home/form.png" alt="Form Image" class="animated wow fadeInRight">
+                        <div class="col-lg-6 col-md-12 justify-content-end d-flex position-relative">
+                            <div class="contact-blob"></div>
+                            <img src="assets/images/home/form.png" data-parallax='{"y" : -50}' alt="Form Image" class=""
+                                data-wow-delay="1s">
                         </div>
                     </div>
                 </div>
@@ -326,9 +336,11 @@
             <div class="row">
                 <div class="col-12">
                     <div class="footer__logo position-absolute">
-                        <img src="assets/images/footerLogo.png" alt="PSNY Footer Logo"
-                            class="img-fluid animated wow fadeInUp">
-                        <span class="animated wow fadeInUp">
+                        <a href="index.html">
+                            <img src="assets/images/footerLogo.png" alt="PSNY Footer Logo"
+                                class="img-fluid wow fadeInUp" data-wow-duration="1s">
+                        </a>
+                        <span class="wow fadeInUp" data-wow-duration="1s">
                             Plastic Surgery
                             <br>
                             of New york
@@ -337,7 +349,7 @@
                 </div>
             </div>
             <div class="row footer__menu">
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
                     <p>About us</p>
                     <ul>
                         <li><a href="#">Our Team</a></li>
@@ -345,7 +357,7 @@
                         <li><a href="#">Our Philosophy</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.8s">
                     <p>Surgical</p>
                     <ul>
                         <li><a href="#">Breast</a></li>
@@ -355,7 +367,7 @@
                         <li><a href="#">Hair</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                     <p>non-surgical</p>
                     <ul>
                         <li><a href="#">Aesthesics</a></li>
@@ -365,14 +377,15 @@
                         <li><a href="#">Laser</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.2s">
                     <p>contact</p>
                     <ul>
                         <li><a href="#">Contact us</a></li>
                         <li><a href="#">Book now</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-4 col-sm-12 d-flex justify-content-end animated wow fadeInUp">
+                <div class="col-lg-4 col-sm-12 d-flex justify-content-end animated wow fadeInUp" data-wow-duration="1s"
+                    data-wow-delay="1.5s">
                     <div class="footer__socials">
                         <div class="cell-info">
                             <span>CALL US</span>
@@ -423,10 +436,10 @@
                 </div>
             </div>
             <div class="row footer__copyright">
-                <div class="col-6 animated wow fadeInUp">
+                <div class="col-6 animated wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
                     <p>&copy; 2020 psny</p>
                 </div>
-                <div class="col-6 text-end animated wow fadeInUp">
+                <div class="col-6 text-end animated wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s">
                     <a href="#">Terms of use</a> |
                     <a href="#">Privacy Policy</a>
                 </div>
@@ -440,14 +453,23 @@
     <div class="cursor-follower"></div>
     <!-- Cursor Ends -->
 
+    <!-- Scroll To Top Starts -->
+    <div id="scroll" class="scroll-to-top">
+        <p>Scroll To Top</p>
+    </div>
+    <!-- Scroll To Top Ends -->
+
     <!-- WOW JS -->
     <script src="assets/vendors/wow-js/wow.min.js"></script>
-    <!-- Lightbox JS -->
-    <script src="assets/vendors/lightbox/lightbox.min.js"></script>
-    <script src="assets/vendors/lightbox/lightbox-plus-jquery.min.js"></script>
+    <!-- Font Awesome CDN -->
+    <script src="https://kit.fontawesome.com/321abfd063.js" crossorigin="anonymous"></script>
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- Scroll Parallax -->
+    <script src="assets/vendors/scroll/jquery.parallax-scroll.js"></script>
+    <!-- Lightbox -->
+    <script src="assets/vendors/lightbox/lightbox.min.js"></script>
     <!-- gsap cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"
         integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ=="
