--- a/laser.html
+++ b/laser.html
@@ -8,7 +8,7 @@
     <title>PSNY</title>
 
     <!-- Animate CSS -->
-    <link rel="stylesheet" href="assets/vendors/animate-css/animate.css">
+    <link rel="stylesheet" href="assets/vendors/animation/animate.css">
     <!-- Boostrap -->
     <link rel="stylesheet" href="assets/vendors/bootstrap/bootstrap.min.css">
     <!-- Main Stylesheet -->
@@ -96,7 +96,7 @@
         <div class="container">
             <div class="row">
                 <div class="notice-inner">
-                    <div class="col d-flex animated wow fadeIn">
+                    <div class="col d-flex animated fadeInLeft">
                         <svg class="animated fadeIn" width="16" height="16" viewBox="0 0 16 16" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -104,7 +104,7 @@
                                 fill="#EB5757" />
                             <circle cx="8" cy="8" r="7.65" stroke="#EB5757" stroke-width="0.7" />
                         </svg>
-                        <div class="notice animated fadeIn">
+                        <div class="notice">
                             <p>
                                 we're are opened.
                                 <br>
@@ -118,8 +118,8 @@
             <div class="row">
                 <div class="col-12">
                     <div class="banner__inner">
-                        <span class="animated wow fadeIn">Non-surgical</span>
-                        <h2 class="animated wow fadeIn">
+                        <span class="wow fadeInUp" data-wow-duration="1s">Non-surgical</span>
+                        <h2 class="wow fadeInUp" data-wow-delay=".5s">
                             Laser
                         </h2>
                     </div>
@@ -135,46 +135,46 @@
             <div class="row align-items-center">
                 <div class="col-md-6">
                     <div class="laser__inner">
-                        <h3 class="wow animated fadeInUp">Nam uismod libero</h3>
-                        <p class="wow animated fadeInUp">
+                        <h3 class="wow fadeInUp">Nam uismod libero</h3>
+                        <p class="wow fadeInUp" data-wow-delay=".2s">
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                             been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
                             galley of type and scrambled it to make a type specimen book
                         </p>
-                        <p class="wow animated fadeInUp">
+                        <p class="wow fadeInUp" data-wow-delay=".4s">
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                             been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
                             galley of type and scrambled it to make a type specimen book
                         </p>
                         <div>
-                            <h3 class="wow animated fadeInUp">Advanrages</h3>
-                            <ul class="wow animated fadeInUp">
-                                <li>Lorem Ipsum is simply dummy text of the printing</li>
-                                <li>Lorem Ipsum is simply dummy text</li>
-                                <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</li>
-                                <li>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</li>
-                                <li>It has survived not only five centuries</li>
+                            <h3 class="wow fadeInUp">Advanrages</h3>
+                            <ul>
+                                <li class="wow fadeInUp" data-wow-delay=".2s">Lorem Ipsum is simply dummy text of the printing</li>
+                                <li class="wow fadeInUp" data-wow-delay=".4s">Lorem Ipsum is simply dummy text</li>
+                                <li class="wow fadeInUp" data-wow-delay=".6s">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</li>
+                                <li class="wow fadeInUp" data-wow-delay=".8s">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</li>
+                                <li class="wow fadeInUp" data-wow-delay="1s">It has survived not only five centuries</li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <img src="assets/images/venis/venis.png" alt="Laser" class="img-fluid wow animated fadeInUp">
+                    <img src="assets/images/venis/venis.png" alt="Laser" class="img-fluid wow zoomIn" data-wow-duration="1.5s">
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-11">
                     <div class="testimonial">
-                        <p class="wow animated fadeInUp">
+                        <p class="wow fadeInUp">
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                             been the industry's standard dummy text <strong>ever since the 1500s</strong>, when an
                             unknown printer took a galley of type and scrambled it to make a type specimen book. It has
                             survived not only five centuries, but also the leap into electronic typesetting, remaining
                             essentially unchanged.
                         </p>
-                        <h4 class="wow animated fadeInUp">SUSIE HOWELL</h4>
-                        <span class="wow animated fadeInUp">
+                        <h4 class="wow fadeInUp" data-wow-delay=".2s">SUSIE HOWELL</h4>
+                        <span class="wow fadeInUp" data-wow-delay=".4s">
                             Lorem ipsum dolor sit amet
                         </span>
                     </div>
@@ -184,7 +184,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="before-after__slider">
-                        <h3>Before and after</h3>
+                        <h3 class="wow fadeInUp" data-wow-duration="2s">Before and after</h3>
                         <div id="carouselExampleFade" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
@@ -220,7 +220,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="videos__slider">
-                        <h3>Videos</h3>
+                        <h3 class="wow fadeInUp" data-wow-duration="2s">Videos</h3>
                         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
@@ -262,11 +262,11 @@
             <div class="row">
                 <div class="col-12">
                     <div class="QnA">
-                        <h3>Questions and answers</h3>
+                        <h3 class="wow fadeInUp">Questions and answers</h3>
                         <div class="accordion accordion-flush" id="accordionFlushExample">
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="flush-headingOne">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    <button class="accordion-button collapsed wow zoomIn" data-wow-duration="1s" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#flush-collapseOne" aria-expanded="false"
                                         aria-controls="flush-collapseOne">
                                         Accordion Item #1
@@ -281,7 +281,7 @@
                             </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="flush-headingTwo">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    <button class="accordion-button collapsed wow zoomIn" data-wow-duration="1s" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#flush-collapseTwo" aria-expanded="false"
                                         aria-controls="flush-collapseTwo">
                                         Accordion Item #2
@@ -297,7 +297,7 @@
                             </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="flush-headingThree">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    <button class="accordion-button collapsed wow zoomIn" data-wow-duration="1s" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#flush-collapseThree" aria-expanded="false"
                                         aria-controls="flush-collapseThree">
                                         Accordion Item #3
@@ -315,7 +315,7 @@
                             </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="flush-headingFour">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    <button class="accordion-button collapsed wow zoomIn" data-wow-duration="1s" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#flush-collapseFour" aria-expanded="false"
                                         aria-controls="flush-collapseFour">
                                         Accordion Item #4
@@ -333,7 +333,7 @@
                             </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="flush-headingFive">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    <button class="accordion-button collapsed wow zoomIn" data-wow-duration="1s" type="button" data-bs-toggle="collapse"
                                         data-bs-target="#flush-collapseFive" aria-expanded="false"
                                         aria-controls="flush-collapseFive">
                                         Accordion Item #5
@@ -364,11 +364,11 @@
                 <div class="contact-form__inner">
                     <div class="row booking position-relative">
                         <div class="col-xl-4 col-xxl-6 col-lg-4 col-md-12">
-                            <h2 class="animated wow fadeInLeft">Contact</h2>
+                            <h2 class="wow fadeInLeft" data-wow-duration="2s">Contact</h2>
                         </div>
                         <div class="col-xl-8 col-xxl-6 col-lg-8 col-md-12">
                             <div class="contact-form__info position-relative">
-                                <div class="animated wow fadeInRight">
+                                <div class="wow fadeInRight" data-wow-duration="2s">
                                     <button class="btn button-secondary">
                                         Book Now
                                     </button>
@@ -381,7 +381,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-6 col-md-12 form animated wow fadeInLeft">
+                        <div class="col-lg-6 col-md-12 form wow fadeInLeft" data-wow-delay=".5s">
                             <p class="font-futura">Ask us a question</p>
                             <form>
                                 <div class="form-floating mb-3">
@@ -419,8 +419,10 @@
                                 <button class="btn button-primary">Submit</button>
                             </form>
                         </div>
-                        <div class="col-lg-6 col-md-12 justify-content-end d-flex">
-                            <img src="assets/images/home/form.png" alt="Form Image" class="animated wow fadeInRight">
+                        <div class="col-lg-6 col-md-12 justify-content-end d-flex position-relative">
+                            <div class="contact-blob"></div>
+                            <img src="assets/images/home/form.png" data-parallax='{"y" : -50}' alt="Form Image" class=""
+                                data-wow-delay="1s">
                         </div>
                     </div>
                 </div>
@@ -435,9 +437,11 @@
             <div class="row">
                 <div class="col-12">
                     <div class="footer__logo position-absolute">
-                        <img src="assets/images/footerLogo.png" alt="PSNY Footer Logo"
-                            class="img-fluid animated wow fadeInUp">
-                        <span class="animated wow fadeInUp">
+                        <a href="index.html">
+                            <img src="assets/images/footerLogo.png" alt="PSNY Footer Logo"
+                                class="img-fluid wow fadeInUp" data-wow-duration="1s">
+                        </a>
+                        <span class="wow fadeInUp" data-wow-duration="1s">
                             Plastic Surgery
                             <br>
                             of New york
@@ -446,7 +450,7 @@
                 </div>
             </div>
             <div class="row footer__menu">
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
                     <p>About us</p>
                     <ul>
                         <li><a href="#">Our Team</a></li>
@@ -454,7 +458,7 @@
                         <li><a href="#">Our Philosophy</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.8s">
                     <p>Surgical</p>
                     <ul>
                         <li><a href="#">Breast</a></li>
@@ -464,7 +468,7 @@
                         <li><a href="#">Hair</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                     <p>non-surgical</p>
                     <ul>
                         <li><a href="#">Aesthesics</a></li>
@@ -474,14 +478,15 @@
                         <li><a href="#">Laser</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.2s">
                     <p>contact</p>
                     <ul>
                         <li><a href="#">Contact us</a></li>
                         <li><a href="#">Book now</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-4 col-sm-12 d-flex justify-content-end animated wow fadeInUp">
+                <div class="col-lg-4 col-sm-12 d-flex justify-content-end animated wow fadeInUp" data-wow-duration="1s"
+                    data-wow-delay="1.5s">
                     <div class="footer__socials">
                         <div class="cell-info">
                             <span>CALL US</span>
@@ -532,10 +537,10 @@
                 </div>
             </div>
             <div class="row footer__copyright">
-                <div class="col-6 animated wow fadeInUp">
+                <div class="col-6 animated wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
                     <p>&copy; 2020 psny</p>
                 </div>
-                <div class="col-6 text-end animated wow fadeInUp">
+                <div class="col-6 text-end animated wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s">
                     <a href="#">Terms of use</a> |
                     <a href="#">Privacy Policy</a>
                 </div>
@@ -549,13 +554,23 @@
     <div class="cursor-follower"></div>
     <!-- Cursor Ends -->
 
-    <!-- Font Awesome CDN -->
-    <script src="https://kit.fontawesome.com/321abfd063.js" crossorigin="anonymous"></script>
+    <!-- Scroll To Top Starts -->
+    <div id="scroll" class="scroll-to-top">
+        <p>Scroll To Top</p>
+    </div>
+    <!-- Scroll To Top Ends -->
+
     <!-- WOW JS -->
     <script src="assets/vendors/wow-js/wow.min.js"></script>
+    <!-- Font Awesome CDN -->
+    <script src="https://kit.fontawesome.com/321abfd063.js" crossorigin="anonymous"></script>
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- Scroll Parallax -->
+    <script src="assets/vendors/scroll/jquery.parallax-scroll.js"></script>
+    <!-- Lightbox -->
+    <script src="assets/vendors/lightbox/lightbox.min.js"></script>
     <!-- gsap cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"
         integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ=="
