--- a/body.html
+++ b/body.html
@@ -8,7 +8,7 @@
     <title>PSNY</title>
 
     <!-- Animate CSS -->
-    <link rel="stylesheet" href="assets/vendors/animate-css/animate.css">
+    <link rel="stylesheet" href="assets/vendors/animation/animate.css">
     <!-- Lightbox CSS -->
     <link rel="stylesheet" href="assets/vendors/lightbox/lightbox.min.css">
     <!-- Boostrap -->
@@ -98,7 +98,7 @@
         <div class="container">
             <div class="row">
                 <div class="notice-inner">
-                    <div class="col d-flex animated wow fadeIn">
+                    <div class="col d-flex animated fadeInLeft">
                         <svg class="animated fadeIn" width="16" height="16" viewBox="0 0 16 16" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -106,7 +106,7 @@
                                 fill="#EB5757" />
                             <circle cx="8" cy="8" r="7.65" stroke="#EB5757" stroke-width="0.7" />
                         </svg>
-                        <div class="notice animated fadeIn">
+                        <div class="notice">
                             <p>
                                 we're are opened.
                                 <br>
@@ -120,7 +120,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="banner__inner">
-                        <h2 class="animated wow fadeIn">
+                        <h2 class="wow fadeInUp" data-wow-duration="2s">
                             Body
                         </h2>
                     </div>
@@ -136,17 +136,17 @@
             <div class="row">
                 <div class="col-12">
                     <div class="body__inner">
-                        <h2>Enhance your beauty</h2>
-                        <p>
+                        <h2 class="wow fadeInUp" data-wow-duration="2s">Enhance your beauty</h2>
+                        <p class="wow fadeInUp" data-wow-duration="2s" data-wow-delay=".2s">
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                             been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
                             galley of type and scrambled it to make a type specimen book.
                         </p>
-                        <p>
+                        <p class="wow fadeInUp" data-wow-duration="2s" data-wow-delay=".3s">
                             It has survived not only five centuries, but also the leap into electronic typesetting,
                             remaining essentially unchanged.
                         </p>
-                        <p>
+                        <p class="wow fadeInUp" data-wow-duration="2s" data-wow-delay=".4s">
                             It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
                             passages, and more recently with desktop publishing software like Aldus PageMaker including
                             versions of Lorem Ipsum.
@@ -155,7 +155,7 @@
                 </div>
             </div>
             <div class="row body__gallery">
-                <div class="col-md-4 wow fadeInUp animated">
+                <div class="col-md-4 wow fadeInUpBig" data-wow-duration="1.5s" data-wow-delay=".2s">
                     <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link"
                         data-lightbox="example-set"
                         data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
@@ -164,7 +164,7 @@
                     </a>
                     <span>Arms</span>
                 </div>
-                <div class="col-md-4 wow fadeInUp animated">
+                <div class="col-md-4 wow fadeInUpBig" data-wow-duration="1.8s" data-wow-delay=".4s">
                     <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link"
                         data-lightbox="example-set"
                         data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
@@ -173,7 +173,7 @@
                     </a>
                     <span>Back</span>
                 </div>
-                <div class="col-md-4 wow fadeInUp animated">
+                <div class="col-md-4 wow fadeInUpBig" data-wow-duration="2s" data-wow-delay=".6s">
                     <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link"
                         data-lightbox="example-set"
                         data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
@@ -182,7 +182,7 @@
                     </a>
                     <span>Medial Thigh Lift</span>
                 </div>
-                <div class="col-md-4 wow fadeInUp animated">
+                <div class="col-md-4 wow fadeInUpBig" data-wow-duration="1s" data-wow-delay=".2s">
                     <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link"
                         data-lightbox="example-set"
                         data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
@@ -191,7 +191,7 @@
                     </a>
                     <span>Lateral Thighs</span>
                 </div>
-                <div class="col-md-4 wow fadeInUp animated">
+                <div class="col-md-4 wow fadeInUpBig" data-wow-duration="1.8s" data-wow-delay=".4s">
                     <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link"
                         data-lightbox="example-set"
                         data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
@@ -200,7 +200,7 @@
                     </a>
                     <span>Liposuction</span>
                 </div>
-                <div class="col-md-4 wow fadeInUp animated">
+                <div class="col-md-4 wow fadeInUpBig" data-wow-duration="2s" data-wow-delay=".6s">
                     <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link"
                         data-lightbox="example-set"
                         data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
@@ -209,7 +209,7 @@
                     </a>
                     <span>Venis</span>
                 </div>
-                <div class="col-md-4 wow fadeInUp animated">
+                <div class="col-md-4 wow fadeInUpBig" data-wow-duration="1s" data-wow-delay=".2s">
                     <a href="https://dummyimage.com/750x400/000000/dedede.png" class="example-image-link"
                         data-lightbox="example-set"
                         data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia">
@@ -230,11 +230,11 @@
                 <div class="contact-form__inner">
                     <div class="row booking position-relative">
                         <div class="col-xl-4 col-xxl-6 col-lg-4 col-md-12">
-                            <h2 class="animated wow fadeInLeft">Contact</h2>
+                            <h2 class="wow fadeInLeft" data-wow-duration="2s">Contact</h2>
                         </div>
                         <div class="col-xl-8 col-xxl-6 col-lg-8 col-md-12">
                             <div class="contact-form__info position-relative">
-                                <div class="animated wow fadeInRight">
+                                <div class="wow fadeInRight" data-wow-duration="2s">
                                     <button class="btn button-secondary">
                                         Book Now
                                     </button>
@@ -247,7 +247,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-6 col-md-12 form animated wow fadeInLeft">
+                        <div class="col-lg-6 col-md-12 form wow fadeInLeft" data-wow-delay=".5s">
                             <p class="font-futura">Ask us a question</p>
                             <form>
                                 <div class="form-floating mb-3">
@@ -285,8 +285,10 @@
                                 <button class="btn button-primary">Submit</button>
                             </form>
                         </div>
-                        <div class="col-lg-6 col-md-12 justify-content-end d-flex">
-                            <img src="assets/images/home/form.png" alt="Form Image" class="animated wow fadeInRight">
+                        <div class="col-lg-6 col-md-12 justify-content-end d-flex position-relative">
+                            <div class="contact-blob"></div>
+                            <img src="assets/images/home/form.png" data-parallax='{"y" : -50}' alt="Form Image" class=""
+                                data-wow-delay="1s">
                         </div>
                     </div>
                 </div>
@@ -301,9 +303,11 @@
             <div class="row">
                 <div class="col-12">
                     <div class="footer__logo position-absolute">
-                        <img src="assets/images/footerLogo.png" alt="PSNY Footer Logo"
-                            class="img-fluid animated wow fadeInUp">
-                        <span class="animated wow fadeInUp">
+                        <a href="index.html">
+                            <img src="assets/images/footerLogo.png" alt="PSNY Footer Logo"
+                                class="img-fluid wow fadeInUp" data-wow-duration="1s">
+                        </a>
+                        <span class="wow fadeInUp" data-wow-duration="1s">
                             Plastic Surgery
                             <br>
                             of New york
@@ -312,7 +316,7 @@
                 </div>
             </div>
             <div class="row footer__menu">
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
                     <p>About us</p>
                     <ul>
                         <li><a href="#">Our Team</a></li>
@@ -320,7 +324,7 @@
                         <li><a href="#">Our Philosophy</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.8s">
                     <p>Surgical</p>
                     <ul>
                         <li><a href="#">Breast</a></li>
@@ -330,7 +334,7 @@
                         <li><a href="#">Hair</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                     <p>non-surgical</p>
                     <ul>
                         <li><a href="#">Aesthesics</a></li>
@@ -340,14 +344,15 @@
                         <li><a href="#">Laser</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.2s">
                     <p>contact</p>
                     <ul>
                         <li><a href="#">Contact us</a></li>
                         <li><a href="#">Book now</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-4 col-sm-12 d-flex justify-content-end animated wow fadeInUp">
+                <div class="col-lg-4 col-sm-12 d-flex justify-content-end animated wow fadeInUp" data-wow-duration="1s"
+                    data-wow-delay="1.5s">
                     <div class="footer__socials">
                         <div class="cell-info">
                             <span>CALL US</span>
@@ -398,10 +403,10 @@
                 </div>
             </div>
             <div class="row footer__copyright">
-                <div class="col-6 animated wow fadeInUp">
+                <div class="col-6 animated wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
                     <p>&copy; 2020 psny</p>
                 </div>
-                <div class="col-6 text-end animated wow fadeInUp">
+                <div class="col-6 text-end animated wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s">
                     <a href="#">Terms of use</a> |
                     <a href="#">Privacy Policy</a>
                 </div>
@@ -415,14 +420,23 @@
     <div class="cursor-follower"></div>
     <!-- Cursor Ends -->
 
+    <!-- Scroll To Top Starts -->
+    <div id="scroll" class="scroll-to-top">
+        <p>Scroll To Top</p>
+    </div>
+    <!-- Scroll To Top Ends -->
+
     <!-- WOW JS -->
     <script src="assets/vendors/wow-js/wow.min.js"></script>
-    <!-- Lightbox JS -->
-    <script src="assets/vendors/lightbox/lightbox.min.js"></script>
-    <script src="assets/vendors/lightbox/lightbox-plus-jquery.min.js"></script>
+    <!-- Font Awesome CDN -->
+    <script src="https://kit.fontawesome.com/321abfd063.js" crossorigin="anonymous"></script>
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- Scroll Parallax -->
+    <script src="assets/vendors/scroll/jquery.parallax-scroll.js"></script>
+    <!-- Lightbox -->
+    <script src="assets/vendors/lightbox/lightbox.min.js"></script>
     <!-- gsap cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"
         integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ=="
