--- a/hands.html
+++ b/hands.html
@@ -8,7 +8,7 @@
     <title>PSNY</title>
 
     <!-- Animate CSS -->
-    <link rel="stylesheet" href="assets/vendors/animate-css/animate.css">
+    <link rel="stylesheet" href="assets/vendors/animation/animate.css">
     <!-- Boostrap -->
     <link rel="stylesheet" href="assets/vendors/bootstrap/bootstrap.min.css">
     <!-- Main Stylesheet -->
@@ -96,15 +96,15 @@
         <div class="container">
             <div class="row">
                 <div class="notice-inner">
-                    <div class="col d-flex animated wow fadeIn">
-                        <svg class="animated fadeIn" width="16" height="16" viewBox="0 0 16 16" fill="none"
+                    <div class="col d-flex fadeInLeft">
+                        <svg class="fadeIn" width="16" height="16" viewBox="0 0 16 16" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M7.38346 10.5303L7.07519 4H8.92481L8.61654 10.5303H7.38346ZM9 12.1829C9 12.4058 8.90226 12.5977 8.69925 12.7586C8.50376 12.9195 8.27068 13 8 13C7.73684 13 7.50376 12.9195 7.30075 12.7586C7.10526 12.5977 7 12.4058 7 12.1829C7 11.9601 7.10526 11.7682 7.30075 11.6011C7.50376 11.4402 7.73684 11.3535 8 11.3535C8.27068 11.3535 8.50376 11.4402 8.69925 11.6011C8.90226 11.7682 9 11.9601 9 12.1829Z"
                                 fill="#EB5757" />
                             <circle cx="8" cy="8" r="7.65" stroke="#EB5757" stroke-width="0.7" />
                         </svg>
-                        <div class="notice animated fadeIn">
+                        <div class="notice">
                             <p>
                                 we're are opened.
                                 <br>
@@ -118,7 +118,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="banner__inner">
-                        <h2 class="animated wow fadeIn">
+                        <h2 class="wow fadeInUp" data-wow-duration="2s">
                             Hands
                         </h2>
                     </div>
@@ -134,47 +134,48 @@
             <div class="row align-items-center">
                 <div class="col-md-6">
                     <div class="hands__inner">
-                        <h3 class="wow animated fadeInUp">Nam uismod libero</h3>
-                        <p class="wow animated fadeInUp">
+                        <h3 class="wow fadeInUp" data-wow-duration="1s">Nam uismod libero</h3>
+                        <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                             been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
                             galley of type and scrambled it to make a type specimen book
                         </p>
-                        <p class="wow animated fadeInUp">
+                        <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                             been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
                             galley of type and scrambled it to make a type specimen book
                         </p>
                         <div>
-                            <h3 class="wow animated fadeInUp">Advanrages</h3>
-                            <ul class="wow animated fadeInUp">
-                                <li>Lorem Ipsum is simply dummy text of the printing</li>
-                                <li>Lorem Ipsum is simply dummy text</li>
-                                <li>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</li>
-                                <li>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</li>
-                                <li>It has survived not only five centuries</li>
+                            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">Advanrages</h3>
+                            <ul>
+                                <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">Lorem Ipsum is simply dummy text of the printing</li>
+                                <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">Lorem Ipsum is simply dummy text</li>
+                                <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</li>
+                                <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</li>
+                                <li class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".7s">It has survived not only five centuries</li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <img src="assets/images/hands/hands.png" alt="Hands"
-                        class="img-fluid wow animated fadeInUp img-bordered">
+                    <!-- <img src="assets/images/hands/hands.png" alt="Hands"
+                        class="img-fluid wow fadeIn img-bordered"> -->
+                    <div class="image__large"></div>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md-11">
                     <div class="testimonial">
-                        <p class="wow animated fadeInUp">
+                        <p class="wow fadeInUp">
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                             been the industry's standard dummy text <strong>ever since the 1500s</strong>, when an
                             unknown printer took a galley of type and scrambled it to make a type specimen book. It has
                             survived not only five centuries, but also the leap into electronic typesetting, remaining
                             essentially unchanged.
                         </p>
-                        <h4 class="wow animated fadeInUp">SUSIE HOWELL</h4>
-                        <span class="wow animated fadeInUp">
+                        <h4 class="wow fadeInUp" data-wow-delay=".2s">SUSIE HOWELL</h4>
+                        <span class="wow fadeInUp" data-wow-delay=".4s">
                             Lorem ipsum dolor sit amet
                         </span>
                     </div>
@@ -183,7 +184,7 @@
 
             <div class="row">
                 <div class="col-12">
-                    <div class="before-after__slider">
+                    <div class="before-after__slider wow fadeInUp" data-wow-duration="2s">
                         <h3>Before and after</h3>
                         <div id="carouselExampleFade" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
@@ -219,7 +220,7 @@
 
             <div class="row">
                 <div class="col-12">
-                    <div class="videos__slider">
+                    <div class="videos__slider wow fadeInUp" data-wow-duration="2s">
                         <h3>Videos</h3>
                         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
@@ -262,41 +263,41 @@
             <div class="row">
                 <div class="col-12">
                     <div class="QnA">
-                        <h3>Questions and answers</h3>
+                        <h3 class="wow fadeInUp" data-wow-duration="1s">Questions and answers</h3>
                         <ul>
-                            <li>
+                            <li class="wow fadeInUp" data-wow-delay=".2s">
                                 What is Lorem Ipsum?
-                                <p>
+                                <p class="wow fadeInUp" data-wow-delay=".3s">
                                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                     Ipsum has been the industry's standard dummy text ever since the 1500s, when an
                                     unknown printer took a galley of type and scrambled it to make a type specimen book.
                                 </p>
                             </li>
-                            <li>
+                            <li class="wow fadeInUp" data-wow-delay=".4s">
                                 Why do we use it?
-                                <p>
+                                <p class="wow fadeInUp" data-wow-delay=".5s">
                                     It is a long established fact that a reader will be distracted by the readable
                                     content of a page when looking at its layout.
                                 </p>
                             </li>
-                            <li>
+                            <li class="wow fadeInUp" data-wow-delay=".6s">
                                 Where does it come from?
-                                <p>
+                                <p class="wow fadeInUp" data-wow-delay=".7s">
                                     Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
                                     piece of classical Latin literature from 45 BC, making it over 2000 years old.
                                 </p>
                             </li>
-                            <li>
+                            <li class="wow fadeInUp" data-wow-delay=".8s">
                                 Where can I get some?
-                                <p>
+                                <p class="wow fadeInUp" data-wow-delay=".9s">
                                     There are many variations of passages of Lorem Ipsum available, but the majority
                                     have suffered alteration in some form, by injected humour, or randomised words which
                                     don't look even slightly believable.
                                 </p>
                             </li>
-                            <li>
+                            <li class="wow fadeInUp" data-wow-delay="1s">
                                 Lorem ipsum dolor sit amet?
-                                <p>
+                                <p class="wow fadeInUp" data-wow-delay="1.1s">
                                     Veritatis obcaecati tenetur iure eius earum ut molestias architecto voluptate
                                     aliquam nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
                                     tenetur error, harum nesciunt ipsum debitis quas aliquid.
@@ -317,11 +318,11 @@
                 <div class="contact-form__inner">
                     <div class="row booking position-relative">
                         <div class="col-xl-4 col-xxl-6 col-lg-4 col-md-12">
-                            <h2 class="animated wow fadeInLeft">Contact</h2>
+                            <h2 class="wow fadeInLeft" data-wow-duration="2s">Contact</h2>
                         </div>
                         <div class="col-xl-8 col-xxl-6 col-lg-8 col-md-12">
                             <div class="contact-form__info position-relative">
-                                <div class="animated wow fadeInRight">
+                                <div class="wow fadeInRight" data-wow-duration="2s">
                                     <button class="btn button-secondary">
                                         Book Now
                                     </button>
@@ -334,7 +335,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-6 col-md-12 form animated wow fadeInLeft">
+                        <div class="col-lg-6 col-md-12 form wow fadeInLeft" data-wow-delay=".5s">
                             <p class="font-futura">Ask us a question</p>
                             <form>
                                 <div class="form-floating mb-3">
@@ -372,8 +373,10 @@
                                 <button class="btn button-primary">Submit</button>
                             </form>
                         </div>
-                        <div class="col-lg-6 col-md-12 justify-content-end d-flex">
-                            <img src="assets/images/home/form.png" alt="Form Image" class="animated wow fadeInRight">
+                        <div class="col-lg-6 col-md-12 justify-content-end d-flex position-relative">
+                            <div class="contact-blob"></div>
+                            <img src="assets/images/home/form.png" data-parallax='{"y" : -50}' alt="Form Image" class=""
+                                data-wow-delay="1s">
                         </div>
                     </div>
                 </div>
@@ -388,9 +391,11 @@
             <div class="row">
                 <div class="col-12">
                     <div class="footer__logo position-absolute">
-                        <img src="assets/images/footerLogo.png" alt="PSNY Footer Logo"
-                            class="img-fluid animated wow fadeInUp">
-                        <span class="animated wow fadeInUp">
+                        <a href="index.html">
+                            <img src="assets/images/footerLogo.png" alt="PSNY Footer Logo"
+                                class="img-fluid wow fadeInUp" data-wow-duration="1s">
+                        </a>
+                        <span class="wow fadeInUp" data-wow-duration="1s">
                             Plastic Surgery
                             <br>
                             of New york
@@ -399,7 +404,7 @@
                 </div>
             </div>
             <div class="row footer__menu">
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
                     <p>About us</p>
                     <ul>
                         <li><a href="#">Our Team</a></li>
@@ -407,7 +412,7 @@
                         <li><a href="#">Our Philosophy</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.8s">
                     <p>Surgical</p>
                     <ul>
                         <li><a href="#">Breast</a></li>
@@ -417,7 +422,7 @@
                         <li><a href="#">Hair</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                     <p>non-surgical</p>
                     <ul>
                         <li><a href="#">Aesthesics</a></li>
@@ -427,14 +432,15 @@
                         <li><a href="#">Laser</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.2s">
                     <p>contact</p>
                     <ul>
                         <li><a href="#">Contact us</a></li>
                         <li><a href="#">Book now</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-4 col-sm-12 d-flex justify-content-end animated wow fadeInUp">
+                <div class="col-lg-4 col-sm-12 d-flex justify-content-end wow fadeInUp" data-wow-duration="1s"
+                    data-wow-delay="1.5s">
                     <div class="footer__socials">
                         <div class="cell-info">
                             <span>CALL US</span>
@@ -485,10 +491,10 @@
                 </div>
             </div>
             <div class="row footer__copyright">
-                <div class="col-6 animated wow fadeInUp">
+                <div class="col-6 wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
                     <p>&copy; 2020 psny</p>
                 </div>
-                <div class="col-6 text-end animated wow fadeInUp">
+                <div class="col-6 text-end wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s">
                     <a href="#">Terms of use</a> |
                     <a href="#">Privacy Policy</a>
                 </div>
@@ -502,13 +508,23 @@
     <div class="cursor-follower"></div>
     <!-- Cursor Ends -->
 
-    <!-- Font Awesome CDN -->
-    <script src="https://kit.fontawesome.com/321abfd063.js" crossorigin="anonymous"></script>
+    <!-- Scroll To Top Starts -->
+    <div id="scroll" class="scroll-to-top">
+        <p>Scroll To Top</p>
+    </div>
+    <!-- Scroll To Top Ends -->
+
     <!-- WOW JS -->
     <script src="assets/vendors/wow-js/wow.min.js"></script>
+    <!-- Font Awesome CDN -->
+    <script src="https://kit.fontawesome.com/321abfd063.js" crossorigin="anonymous"></script>
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- Scroll Parallax -->
+    <script src="assets/vendors/scroll/jquery.parallax-scroll.js"></script>
+    <!-- Lightbox -->
+    <script src="assets/vendors/lightbox/lightbox.min.js"></script>
     <!-- gsap cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"
         integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ=="
