--- a/philosophy.html
+++ b/philosophy.html
@@ -8,7 +8,7 @@
     <title>PSNY</title>
 
     <!-- Animate CSS -->
-    <link rel="stylesheet" href="assets/vendors/animate-css/animate.css">
+    <link rel="stylesheet" href="assets/vendors/animation/animate.css">
     <!-- Boostrap -->
     <link rel="stylesheet" href="assets/vendors/bootstrap/bootstrap.min.css">
     <!-- Main Stylesheet -->
@@ -96,7 +96,7 @@
         <div class="container">
             <div class="row">
                 <div class="notice-inner">
-                    <div class="col d-flex animated wow fadeIn">
+                    <div class="col d-flex animated fadeInLeft">
                         <svg class="animated fadeIn" width="16" height="16" viewBox="0 0 16 16" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -104,7 +104,7 @@
                                 fill="#EB5757" />
                             <circle cx="8" cy="8" r="7.65" stroke="#EB5757" stroke-width="0.7" />
                         </svg>
-                        <div class="notice animated fadeIn">
+                        <div class="notice">
                             <p>
                                 we're are opened.
                                 <br>
@@ -117,7 +117,7 @@
             </div>
             <div class="row">
                 <div class="col-12">
-                    <h2 class="animated wow fadeIn">
+                    <h2 class="wow fadeInUp" data-wow-duration="2s">
                         Our Philosophy
                     </h2>
                 </div>
@@ -127,7 +127,7 @@
     <!-- Banner Ends -->
 
     <!-- Banner Bottom Starts -->
-    <section class="banner-bottom">
+    <section class="banner-bottom wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -147,8 +147,8 @@
             <div class="row">
                 <div class="col-12">
                     <div class="philosophy-inner">
-                        <h2 class="title wow animated fadeInUp">Understanding</h2>
-                        <p class="description wow animated fadeInUp">
+                        <h2 class="title wow fadeInRight" data-wow-duration="1s">Understanding</h2>
+                        <p class="description wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo.
                             Proin sit amet fringilla erat. Curabitur nec sapien auctor, sodales nunc eu, sollicitudin
                             mi. Phasellus sodales egestas vestibulum. Quisque facilisis dolor orci, in eleifend est
@@ -156,8 +156,8 @@
                             lectus urna nec.
                         </p>
 
-                        <h2 class="title wow animated fadeInUp">Aesthetics</h2>
-                        <p class="description wow animated fadeInUp">
+                        <h2 class="title wow fadeInRight" data-wow-duration="1s"  data-wow-delay=".4s">Aesthetics</h2>
+                        <p class="description wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo.
                             Proin sit amet fringilla erat. Curabitur nec sapien auctor, sodales nunc eu, sollicitudin
                             mi. Phasellus sodales egestas vestibulum. Quisque facilisis dolor orci, in eleifend est
@@ -165,16 +165,17 @@
                             lectus urna nec.
                         </p>
 
-                        <h2 class="title wow animated fadeInUp">Precision</h2>
-                        <p class="description wow animated fadeInUp">
+                        <h2 class="title wow fadeInRight" data-wow-duration="1s"  data-wow-delay=".8s">Precision</h2>
+                        <p class="description wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo.
                             Proin sit amet fringilla erat. Curabitur nec sapien auctor, sodales nunc eu, sollicitudin
                             mi. Phasellus sodales egestas vestibulum. Quisque facilisis dolor orci, in eleifend est
                             imperdiet vitae. In cursus ex non aliquet ultricies, est lacus volutpat neque, at fermentum
                             lectus urna nec.
                         </p>
+                        </p>
 
-                        <div class="wow animated fadeInUp">
+                        <div class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod eget libero et commodo.
                             Proin sit amet fringilla erat. Curabitur nec sapien auctor, sodales nunc eu, sollicitudin
                             mi. Phasellus sodales egestas vestibulum. Quisque facilisis dolor orci, in eleifend est
@@ -186,7 +187,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <div class="btns_group wow animated wow fadeInUp">
+                    <div class="btns_group wow animated wow zoomIn" data-wow-duration="1s" data-wow-delay=".5s">
                         <button class="btn button-secondary">
                             Our Practices
                         </button>
@@ -207,11 +208,11 @@
                 <div class="contact-form__inner">
                     <div class="row booking position-relative">
                         <div class="col-xl-4 col-xxl-6 col-lg-4 col-md-12">
-                            <h2 class="animated wow fadeInLeft">Contact</h2>
+                            <h2 class="wow fadeInLeft" data-wow-duration="2s">Contact</h2>
                         </div>
                         <div class="col-xl-8 col-xxl-6 col-lg-8 col-md-12">
                             <div class="contact-form__info position-relative">
-                                <div class="animated wow fadeInRight">
+                                <div class="wow fadeInRight" data-wow-duration="2s">
                                     <button class="btn button-secondary">
                                         Book Now
                                     </button>
@@ -224,7 +225,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-6 col-md-12 form animated wow fadeInLeft">
+                        <div class="col-lg-6 col-md-12 form wow fadeInLeft" data-wow-delay=".5s">
                             <p class="font-futura">Ask us a question</p>
                             <form>
                                 <div class="form-floating mb-3">
@@ -262,8 +263,10 @@
                                 <button class="btn button-primary">Submit</button>
                             </form>
                         </div>
-                        <div class="col-lg-6 col-md-12 justify-content-end d-flex">
-                            <img src="assets/images/home/form.png" alt="Form Image" class="animated wow fadeInRight">
+                        <div class="col-lg-6 col-md-12 justify-content-end d-flex position-relative">
+                            <div class="contact-blob"></div>
+                            <img src="assets/images/home/form.png" data-parallax='{"y" : -50}' alt="Form Image" class=""
+                                data-wow-delay="1s">
                         </div>
                     </div>
                 </div>
@@ -278,9 +281,11 @@
             <div class="row">
                 <div class="col-12">
                     <div class="footer__logo position-absolute">
-                        <img src="assets/images/footerLogo.png" alt="PSNY Footer Logo"
-                            class="img-fluid animated wow fadeInUp">
-                        <span class="animated wow fadeInUp">
+                        <a href="index.html">
+                            <img src="assets/images/footerLogo.png" alt="PSNY Footer Logo"
+                                class="img-fluid wow fadeInUp" data-wow-duration="1s">
+                        </a>
+                        <span class="wow fadeInUp" data-wow-duration="1s">
                             Plastic Surgery
                             <br>
                             of New york
@@ -289,7 +294,7 @@
                 </div>
             </div>
             <div class="row footer__menu">
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
                     <p>About us</p>
                     <ul>
                         <li><a href="#">Our Team</a></li>
@@ -297,7 +302,7 @@
                         <li><a href="#">Our Philosophy</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.8s">
                     <p>Surgical</p>
                     <ul>
                         <li><a href="#">Breast</a></li>
@@ -307,7 +312,7 @@
                         <li><a href="#">Hair</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                     <p>non-surgical</p>
                     <ul>
                         <li><a href="#">Aesthesics</a></li>
@@ -317,14 +322,15 @@
                         <li><a href="#">Laser</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2 col-sm-3 col-6 menu animated wow fadeInUp">
+                <div class="col-lg-2 col-sm-3 col-6 menu wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.2s">
                     <p>contact</p>
                     <ul>
                         <li><a href="#">Contact us</a></li>
                         <li><a href="#">Book now</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-4 col-sm-12 d-flex justify-content-end animated wow fadeInUp">
+                <div class="col-lg-4 col-sm-12 d-flex justify-content-end animated wow fadeInUp" data-wow-duration="1s"
+                    data-wow-delay="1.5s">
                     <div class="footer__socials">
                         <div class="cell-info">
                             <span>CALL US</span>
@@ -375,10 +381,10 @@
                 </div>
             </div>
             <div class="row footer__copyright">
-                <div class="col-6 animated wow fadeInUp">
+                <div class="col-6 animated wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
                     <p>&copy; 2020 psny</p>
                 </div>
-                <div class="col-6 text-end animated wow fadeInUp">
+                <div class="col-6 text-end animated wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s">
                     <a href="#">Terms of use</a> |
                     <a href="#">Privacy Policy</a>
                 </div>
@@ -392,11 +398,21 @@
     <div class="cursor-follower"></div>
     <!-- Cursor Ends -->
 
+    <!-- Scroll To Top Starts -->
+    <div id="scroll" class="scroll-to-top">
+        <p>Scroll To Top</p>
+    </div>
+    <!-- Scroll To Top Ends -->
+
     <!-- WOW JS -->
     <script src="assets/vendors/wow-js/wow.min.js"></script>
+    <!-- Font Awesome CDN -->
+    <script src="https://kit.fontawesome.com/321abfd063.js" crossorigin="anonymous"></script>
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- Scroll Parallax -->
+    <script src="assets/vendors/scroll/jquery.parallax-scroll.js"></script>
     <!-- gsap cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"
         integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ=="
